test/errors/FNF.tec
! TECO test: Test FNF error !
! Commands: ?FNF !
! Requirements: None !
! Execution: Standard !
! Expect: ?FNF [FNF.log] !
 
! Include: setup-01.tec !

@^UA|baz|                           ! Name of non-existent input file !

@ER/^EQA/                           ! Test: open file for read !

! Include: cleanup-01.tec !
